--- a/src/views/pages/Appointment.ejs
+++ b/src/views/pages/Appointment.ejs
@@ -40,9 +40,9 @@
                         </select>
                     </div>
                     <label for="repairType" class="text-white"></label>
-                    <div class="container text-dark">
+                    <div class="container text-dark" id="calendar-container">
                         <div class="row justify-content-center">
-                            <div class="col-lg-8">
+                            <div class="">
                                 <div class="card">
                                     <div class="card-header row">
                                         <button id="prevMonth" class="btn btn-outline-secondary m-auto">&lt;</button>
