Calendar fix, because i messed it up when fixing other things

--- a/src/views/pages/Admin.ejs
+++ b/src/views/pages/Admin.ejs
@@ -51,7 +51,7 @@
                             <option value="workers"><%= __('Workers') %></option>
                           </select>
                           
-                          <input id="userSearchInput" class="form-control bg-dark text-white border-white" type="text" placeholder="<%= __('Search by Email, ID or ProjectID') %>">
+                          <input id="userSearchInput" class="form-control bg-dark text-white border-white" type="text" placeholder="<%= __('Search by Email or ID') %>">
                           <hr class="text-white">
                           <button id="removeWorkerButton" class="btn btn-outline-danger text-white"><%= __('Remove Worker') %></button>
                           <button id="addWorkerButton" class="btn btn-outline-success text-white"><%= __('Add Worker') %></button>
