--- a/public/css/app.css
+++ b/public/css/app.css
@@ -62,6 +62,7 @@
   }
 
   #calendar-container {
+    padding: 15px;
     min-width:275px;
     max-width:325px;
     display: flex;
@@ -117,6 +118,11 @@
     table thead {
       display: none; /* Hide header only on small screens */
     }
+    .container {
+      padding: 0;
+      margin: 0 auto;
+      min-width:95%;
+    }
   
     table tbody tr {
       display: block;
@@ -146,10 +152,9 @@
     }
   }
 
-  @media (max-width: 400px) {
+  @media (max-width: 500px) {
     #calendar-container {
       margin:0 auto;
-      padding:0;
       min-width:250px;
     }
   }
@@ -567,7 +572,6 @@
     border-radius: 5px;
     font-size: 2vw;
   }
-
 
   .carousel-indicators .btn {
     margin-left: 5px;
