--- a/src/views/pages/AboutUs.ejs
+++ b/src/views/pages/AboutUs.ejs
@@ -92,9 +92,9 @@
     </section>
     <div class="footer pt-2">
         <div class="container">
-            <p>&copy; 2023 Car Repair Shop - Odre, LV-3285</p>
+            <p>&copy; 2025 U&M Auto - Odre, LV-3285</p>
             <p class="mb-2">
-                <%= __('contact_us') %>: velderis@gmail.com or <%= __('call_us') %>
+                <%= __('contact_us') %>: velderis@gmail.com <%= __('call_us') %>
             </p>
 
             <!-- Language Switcher Links in Footer -->
