--- a/src/views/pages/Admin.ejs
+++ b/src/views/pages/Admin.ejs
@@ -117,6 +117,8 @@
                                     <!-- Appointment data will be injected here -->
                                 </tbody>
                             </table>
+                            <div id="userPaginationControls" class="mt-3"></div>
+
                         </div>
 
                         <div id="adminDataContainer" class="table-responsive text-white nodisplay">
