--- a/src/views/pages/Login.ejs
+++ b/src/views/pages/Login.ejs
@@ -25,11 +25,11 @@
                         </div>
                         <input type="password" class="form-control" id="password" placeholder="<%= __('Enter a password') %>" maxlength="45">
                     </div>
-                    <a href="/RecoverPassword">Forgot password?</a>
+                    <a href="/RecoverPassword"><%= __('Forgot password?') %></a>
                     <button type="submit" class="btn btn-secondary btn-block mt-1"><%= __('Login button') %></button>
                     <br>
                 </form>
-                <a class="text-center btn text-white btn-block mb-3 mt-0" href="/SignUp"><b>Create an account instead?<b></a>
+                <a class="text-center btn text-white btn-block mb-3 mt-0" href="/SignUp"><b><%= __('Create an account instead?') %><b></a>
             </div>
             
         </div>
