--- a/src/views/pages/Profile.ejs
+++ b/src/views/pages/Profile.ejs
@@ -10,10 +10,9 @@
     <div class="profile-content" id="profile-info">
       <h2 class="profile-title"><%= __('User Profile') %></h2>
       <hr class="bg-white">
-      
         <p class="profile-item">
           <span class="profile-label"><%= __('Name') %>:</span>
-          <span><span id="name" class="profile-value"></span>&nbsp;&nbsp;<a type="button" class=" text-white" tabindex="0"
+          <span class="d-flex align-items-center"><span id="name" class="profile-value"></span>&nbsp;&nbsp;<a type="button" class=" text-white mt-n3" tabindex="0"
           id="change-name-button"><svg  xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24" fill="currentColor">
             <path d="M3 17.25V21h3.75l11.06-11.06-3.75-3.75L3 17.25zM22.71 7.04a1 1 0 0 0 0-1.41l-2.34-2.34a1 1 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/>
         </svg>
@@ -23,7 +22,7 @@
         </p>
         <p class="profile-item">
           <span class="profile-label"><%= __('Username') %>:</span>
-          <span><span id="username" class="profile-value"></span>&nbsp;&nbsp;<a type="button" class=" text-white" tabindex="0"
+          <span class="d-flex align-items-center"><span id="username" class="profile-value"></span>&nbsp;&nbsp;<a type="button" class=" text-white mt-n3" tabindex="0"
           id="change-username-button"><svg  xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24" fill="currentColor">
             <path d="M3 17.25V21h3.75l11.06-11.06-3.75-3.75L3 17.25zM22.71 7.04a1 1 0 0 0 0-1.41l-2.34-2.34a1 1 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/>
         </svg>
@@ -36,14 +35,14 @@
         </p>
         <p class="profile-item">
           <span class="profile-label"><%= __('Password') %>:</span>
-          <span><span  class="profile-value">********</span>&nbsp;&nbsp;<a type="button" class=" text-white" tabindex="0"
+          <span class="d-flex align-items-center"><span class="profile-value">********</span>&nbsp;&nbsp;<a type="button" class="text-white mt-n4" tabindex="0"
           id="change-password-button"><svg  xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24" fill="currentColor">
             <path d="M3 17.25V21h3.75l11.06-11.06-3.75-3.75L3 17.25zM22.71 7.04a1 1 0 0 0 0-1.41l-2.34-2.34a1 1 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/>
         </svg>
         </a>
         </span>
         </p>
-        <button type="button" id="deleteAccountBtn" class="delete-account-button mt-4" data-bs-toggle="modal" data-bs-target="#deleteAccountModal">
+        <button type="button" id="deleteAccountBtn" class="delete-account-button" data-bs-toggle="modal" data-bs-target="#deleteAccountModal">
           <%= __('Delete account') %>
         </button>
       </div>
