--- a/src/views/pages/Statistics.ejs
+++ b/src/views/pages/Statistics.ejs
@@ -1,46 +1,31 @@
-
 <head>
   <!-- Statistics display js-->
   <script src="https://cdn.jsdelivr.net/npm/chart.js" nonce="<%= nonce %>"></script>
 </head>
-<style nonce="<%= nonce %>">
-  /* Center the text inside the chart */
-  .chart-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-  }
-  .customContainer{
-    min-width:300px;
-  }
-  .gapcontainer{
-    gap:20px;
-  }
-</style>
 
 <body>
-
   <div class="container-fluid">
-    <div class="row justify-content-center mt-5 gapcontainer"> <!-- Added 'justify-content-center' and 'gap' for better alignment and spacing -->
+    <div class="row justify-content-center mt-5 gapcontainer">
       <!-- User Statistics Container -->
-      <div id="UserStatisticsContainer" class="col-lg-5 bg-light p-4 customContainer" >
-        <!-- User data will be dynamically added here -->
+      <div id="UserStatisticsContainer" class="col-md-3 bg-light p-4">
         <div class="chart-container">
           <canvas id="userStatisticsChart"></canvas>
-          <!-- User cards will be dynamically added here -->
         </div>
       </div>
-  
+
       <!-- Project Statistics Container -->
-      <div id="ProjectStatisticsContainer" class="col-lg-5 bg-light p-4 customContainer" >
+      <div id="ProjectStatisticsContainer" class="col-md-3 bg-light p-4">
         <div class="chart-container">
           <canvas id="projectStatisticsChart"></canvas>
         </div>
       </div>
+
+      <div id="ProjectStatusStatisticsContainer" class="col-md-3 bg-light p-4">
+        <div class="chart-container">
+          <canvas id="projectStatusStatisticsChart"></canvas>
+        </div>
+      </div>
     </div>
   </div>
-  
   <script src="/js/Statistics.js" nonce="<%= nonce %>"></script>
-
 </body>
