--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -142,21 +142,21 @@
                             <%= __('Profile') %>
                         </a>
                         <div class=" dropdown-menu " aria-labelledby="accountDropdown">
-                            <a class=" dropdown-item text-light pl-3" href="/auth/ProfilePage">
+                            <a class=" dropdown-item text-white pl-3" href="/auth/ProfilePage">
                                 <%= __('Account Info') %>
                             </a>
                             <div class="bg-gray ">
-                                <a class="  dropdown-item text-light pl-3 " href="/auth/UserAppointment">
+                                <a class="  dropdown-item text-white pl-3 " href="/auth/UserAppointment">
                                     <%= __('Appointments') %>
                                 </a>
-                                <a class="  dropdown-item text-light pl-3" href="/auth/Settings">
+                                <a class="  dropdown-item text-white pl-3" href="/auth/Settings">
                                     <%= __('Notifications') %>
                                 </a>
-                                <a id="AdminMenu" class=" pl-3 dropdown-item text-light nodisplay "
+                                <a id="AdminMenu" class=" pl-3 dropdown-item text-white nodisplay "
                                     href="/admin/admin-dashboard">
                                     <%= __('Admin panel') %>
                                 </a>
-                                <a id="Statistics" class=" pl-3   dropdown-item text-light nodisplay "
+                                <a id="Statistics" class=" pl-3   dropdown-item text-white nodisplay "
                                     href="/admin/Statistics">
                                     <%= __('Statistics') %>
                                 </a>
