--- a/src/views/pages/Estimator.ejs
+++ b/src/views/pages/Estimator.ejs
@@ -107,11 +107,11 @@
     </div>
     </div>
 
-    <div class="footer pt-5 mt-5">
+    <div class="footer pt-2 mt-5">
         <div class="container">
-            <p>&copy; 2023 Car Repair Shop - Odre, LV-3285</p>
+            <p>&copy; 2025 U&M Auto - Odre, LV-3285</p>
             <p class="mb-2">
-                <%= __('contact_us') %>: velderis@gmail.com or <%= __('call_us') %>
+                <%= __('contact_us') %>: velderis@gmail.com <%= __('call_us') %>
             </p>
 
             <!-- Language Switcher Links in Footer -->
