--- a/src/views/pages/Services.ejs
+++ b/src/views/pages/Services.ejs
@@ -255,9 +255,9 @@
     
     <div class="footer">
         <div class="container">
-            <p>&copy; 2023 Car Repair Shop - Odre, LV-3285</p>
+            <p>&copy; 2025 U&M Auto, SIA - Odre, LV-3285</p>
             <p class="mb-2">
-                <%= __('contact_us') %>: velderis@gmail.com or <%= __('call_us') %>
+                <%= __('contact_us') %>: velderis@gmail.com <%= __('call_us') %>
             </p>
 
             <!-- Language Switcher Links in Footer -->
