--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -368,9 +368,9 @@
 
     <div class="footer mt-5">
         <div class="container">
-            <p>&copy; 2023 Car Repair Shop - Odre, LV-3285</p>
+            <p>&copy; 2025 U&M Auto - Odre, LV-3285</p>
             <p class="mb-2">
-                <%= __('contact_us') %>: velderis@gmail.com or <%= __('call_us') %>
+                <%= __('contact_us') %>: velderis@gmail.com <%= __('call_us') %>
             </p>
 
             <!-- Language Switcher Links in Footer -->
