Changed estimator to new requirements

--- a/src/views/pages/Profile.ejs
+++ b/src/views/pages/Profile.ejs
@@ -101,12 +101,10 @@
             <%= __('Cancel') %>
           </button>
 
-          <!-- Laravel Form for DELETE Method -->
-          <form method="POST">
-            <button type="submit" class="btn btn-danger">
-              <%= __('Delete Account') %>
-            </button>
-          </form>
+          <button id="deleteAccountButton" class="btn btn-danger">
+            <%= __('Delete Account') %>
+          </button>          
+          
         </div>
       </div>
     </div>
