Translations fixed for admin and other, updated app.js no longer has some random admin route functions, sessions fixed to be proper and other unused things removed

--- a/src/views/pages/UserAppointment.ejs
+++ b/src/views/pages/UserAppointment.ejs
@@ -35,5 +35,6 @@
 
     </div>
     <script nonce="<%= nonce %>">const csrfToken = "<%= csrfToken %>";</script>
+    <script nonce="<%= nonce %>">const PROJECTS_DATA = <%- JSON.stringify(projects) %>;</script>
     <script src="/js/UserAppointment.js" nonce="<%= nonce %>"></script>
 </body>
