--- a/src/views/pages/RecoverPassword.ejs
+++ b/src/views/pages/RecoverPassword.ejs
@@ -19,7 +19,7 @@
                     <button type="submit" class="btn btn-secondary btn-block mt-4 "><%= __('Send Reset Link') %></button>
                     <br>
                 </form>
-                <a class="text-center  btn-block mb-3 mt-0" href="/Login">Back to Login</a>
+                <a class="text-center  btn-block mb-3 mt-0" href="/Login"><%= __('Back to login') %><</a>
             </div>
         </div>
     </div>
