--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" nonce="<%= nonce %>">
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/app.css">
-    <link rel="manifest" href="/js/manifest.json">
+    <link rel="manifest" href="/manifest.json">
     <link rel="icon" type="image/png" href="/images/icon.png">
         <!-- Local js-->
         <script src="/js/app.js" nonce="<%= nonce %>"></script>
