--- a/src/views/pages/AboutUs.ejs
+++ b/src/views/pages/AboutUs.ejs
@@ -2,9 +2,8 @@
     <div class="d-flex justify-content-center align-items-center ">
         <section class="container  text-white">
 
-            <div class="row justify-content-center "> <!-- Center the row -->
+            <div class="row justify-content-center ">
                 <div tabindex="0" class="col-md-10 ml-3  p-4 mt-3 mr-3 rounded text-light bg-light">
-                    <!-- General Information -->
                     <h2 class="text-white">
                         <%= __('general_info') %>
                     </h2>
@@ -16,13 +15,12 @@
                         <%= __('pricing_description') %>
                     </p>
                 </div>
-                <div class="w-120 my-3 "></div> <!-- Gap -->
-                <div class="col-md-10  ml-3 mt-3 mr-3 "> <!-- Visit Our Location -->
+                <div class="w-120 my-3 "></div>
+                <div class="col-md-10  ml-3 mt-3 mr-3 ">
                     <div class="row">
                         <div
                             class="col-12  p-4 d-flex flex-lg-row  justify-content-between align-items-start rounded bg-light text-light">
-                            <!-- Responsive Flex Container -->
-                            <div> <!-- Text and Address -->
+                            <div>
                                 <h2 class="text-white">
                                     <%= __('visit_us') %>
                                 </h2>
@@ -48,7 +46,7 @@
     <section class="py-2">
         <div tabindex=0 class="container text-white  rounded ">
             <div class="row justify-content-center text-light">
-                <div class="col-md-10 col-lg-5 p-4 bg-light"> <!-- Contact Us Text -->
+                <div class="col-md-10 col-lg-5 p-4 bg-light">
                     <h2 class="text-white">
                         <%= __('contact_us') %>
                     </h2>
@@ -59,7 +57,7 @@
                         <%= __('call_us') %>
                     </p>
                 </div>
-                <div class="col-md-9 col-lg-5 p-4 bg-light"> <!-- Contact Form -->
+                <div class="col-md-9 col-lg-5 p-4 bg-light">
                     <form>
                         <div class="form-group">
                             <label for="name">
@@ -97,7 +95,6 @@
                 <%= __('contact_us') %>: velderis@gmail.com <%= __('call_us') %>
             </p>
 
-            <!-- Language Switcher Links in Footer -->
             <div class="language-switcher-footer">
                 <a href="/?lang=en" class="footer-link"><span class="flag-icon flag-icon-gb"></span> English</a> |
                 <a href="/?lang=lv" class="footer-link"><span class="flag-icon flag-icon-lv"></span> Latviešu valoda</a>
@@ -109,5 +106,5 @@
         </div>
     </div>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= apiKey %>&callback=initMap"
-        nonce="<%= nonce %>">
-        </script>
+        nonce="<%= nonce %>"></script>
+    <script src="/js/AboutUs.js" nonce="<%= nonce %>"></script>
