Alerts updated to work more smoothly and blocking submit buttons until response is receive

--- a/src/views/pages/AboutUs.ejs
+++ b/src/views/pages/AboutUs.ejs
@@ -19,9 +19,9 @@
                 <div class="col-md-10  ml-3 mt-3 mr-3 ">
                     <div class="row">
                         <div
-                            class="col-12  p-4 d-flex flex-lg-row  justify-content-between align-items-start rounded bg-light text-light">
+                            class="col-12  p-4 d-flex flex-lg-row  justify-content-between align-items-start rounded bg-light text-light selectable">
                             <div>
-                                <h2 class="text-white">
+                                <h2 class="text-white ">
                                     <%= __('visit_us') %>
                                 </h2>
                                 <p>
@@ -42,11 +42,10 @@
         </section>
     </div>
 
-
     <section class="py-2">
         <div tabindex=0 class="container text-white  rounded ">
             <div class="row justify-content-center text-light">
-                <div class="col-md-10 col-lg-5 p-4 bg-light">
+                <div class="col-md-10 col-lg-5 p-4 bg-light selectable">
                     <h2 class="text-white">
                         <%= __('contact_us') %>
                     </h2>
@@ -88,10 +87,10 @@
             </div>
         </div>
     </section>
-    <div class="footer pt-2">
+    <div class="footer pt-2 selectable">
         <div class="container">
             <p>&copy; 2025 U&M Auto - Odre, LV-3285</p>
-            <p class="mb-2">
+            <p class="mb-2 ">
                 <%= __('contact_us') %>: velderis@gmail.com <%= __('call_us') %>
             </p>
 
