--- a/src/views/pages/Estimator.ejs
+++ b/src/views/pages/Estimator.ejs
@@ -84,7 +84,7 @@
                     </table>
                 </div>
             </div>
-            <div class="col-lg-4 col-12 text-white mt-4 mt-lg-0" id="pricingPanel">
+            <div class="col-lg-4 col-12 text-white mt-4 mt-lg-0 selectable" id="pricingPanel">
                 <div id="paintJobPricing">
                     <h3><%= __('Service Breakdown') %></h3>
                     <p><%= __('Repair Price') %>: €<span id="paintPrice">0.00</span></p>
