--- a/src/views/pages/UserAppointment.ejs
+++ b/src/views/pages/UserAppointment.ejs
@@ -27,7 +27,7 @@
               </th>
             </tr>
           </thead>
-          <tbody id="appointment-table-body">
+          <tbody id="appointment-table-body" class="selectable">
             <!-- JS will inject rows here -->
           </tbody>
         </table>
