--- a/src/views/pages/Admin.ejs
+++ b/src/views/pages/Admin.ejs
@@ -1,7 +1,7 @@
 
 <body>
     <div>
-        <div id="admin-container" class="container my-4 customContainer bg-light rounded mx-80">
+        <div id="admin-container" class="container my-4 customContainer bg-light rounded mx-80 selectable">
             <h2 class="text-center mb-4 text-white mt-3" id="TitleHeader"><%= __('Projects') %></h2>
             <div class="container-fluid">
                 <div class="row">
