--- a/src/views/pages/WorkerPage.ejs
+++ b/src/views/pages/WorkerPage.ejs
@@ -1,6 +1,6 @@
 
 <body>
-    <div class="container my-4 bg-light rounded worker-content">
+    <div class="container my-4 bg-light rounded worker-content selectable">
         <h2 class="text-center text-white p-3   " id="TitleHeader"><%= __('Projects') %></h2>
 
         <!-- Table to display appointment data -->
