Fixed signup and other

--- a/src/views/pages/SignUp.ejs
+++ b/src/views/pages/SignUp.ejs
@@ -3,7 +3,7 @@
     <div class="container mx-80 mt-5">
         <div class="row justify-content-center  text-white">
             <div class="col-md-4 bg-light rounded">
-                <form class="p-4" id="signupForm" action="/auth/sign-up" method="post">
+                <form class="p-4" id="signupForm">
                     <h1 class="text-center"><%= __('SignUp') %></h1>
                     <div class="form-group">
                         <label class="row ml-0 mb-2 " id='name-red' for="name"><%= __('Name') %> <span class="ml-1 nodisplay"
