Password reset with email

--- a/src/views/pages/ChangePassword.ejs
+++ b/src/views/pages/ChangePassword.ejs
@@ -7,7 +7,7 @@
                     <div class="form-group">
                         <div id="password-red" class="row ml-0 mb-2" for="newPassword">
                             <%= __('New Password') %>
-                            <span class="ml-1 nodisplay text-danger" id="InvalidPassword"><b>- <%= __('Password must be at least 8 characters') %></b></span>
+                            <span class="ml-1 nodisplay text-danger" id="InvalidPassword"><b>- <%= __('SafePassword') %></b></span>
                             <span class="ml-1 nodisplay text-danger" id="EmptyPassword"><b>- <%= __('Enter a new password') %></b></span>
                         </div>
                         <input type="password" class="form-control" id="newPassword" placeholder="<%= __('Enter new password') %>" maxlength="45">
