--- a/src/views/pages/Estimator.ejs
+++ b/src/views/pages/Estimator.ejs
@@ -3,7 +3,7 @@
     <div class="container text-white mt-5 bg-light rounded ">
         <div class="row pt-4 px-3">
             <div class="col-lg-8 col-12">
-                <h2 tabindex=0><%= __('Select Car Areas to Paint') %></h2>
+                <h2 id= "mainTitle" tabindex=0><%= __('Select Car Areas to Paint') %></h2>
                 <div class="mt-3 bg-dark" id="imageContainer">
                     <img class="mt-3" src="../images/car_template.png" alt="<%= __('Your Image') %>" id="carImage" usemap="#image-map" />
                     <canvas class="mt-3" id="overlayCanvas"></canvas>
